--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,8 +1,6 @@
-<p>
-  REPTILEHAUS NG2 CHAT DEMO
-</p>
 <div *ngFor="let message of messages">
-  {{message.text}}
+  {{message.date| date: 'M/d/yy'}} {{message.date| date: 'h:mm:ss'}}: {{message.text}}
 </div>
-<input [(ngModel)]="message" />
+
+<input #chatInput (keyup.enter)="sendMessage()" [(ngModel)]="message" />
 <button (click)="sendMessage()">Send</button>
